tolto stringutils e usato blank nativo per controllare i field vuoti, accorciato qualche metodo e reso più leggibile